// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INJECT DEVELOPMENT should handle references classnames 1`] = `
Array [
  "border-top-color__GREEN",
  ".border-top-color__GREEN:hover {
  border-top-color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
  "border-right-color__GREEN",
  ".border-right-color__GREEN:hover {
  border-right-color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
  "border-bottom-color__GREEN",
  ".border-bottom-color__GREEN:hover {
  border-bottom-color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
  "border-left-color__GREEN",
  ".border-left-color__GREEN:hover {
  border-left-color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
]
`;

exports[`INJECT DEVELOPMENT should inject both pseudo selector and breakpoint 1`] = `
Array [
  "hover:tablet:color__RED",
  "@media (max-width: 768px) {.hover\\\\:tablet\\\\:color__RED:hover {
  color: red;
}}",
]
`;

exports[`INJECT DEVELOPMENT should inject group decorators 1`] = `
Array [
  "groupHover:color__GREEN",
  ".group:hover .groupHover\\\\:color__GREEN {
  color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
]
`;

exports[`INJECT DEVELOPMENT should inject multiple 1`] = `
Array [
  "tablet:color__RED",
  "@media (max-width: 768px) {.tablet\\\\:color__RED {
  color: red;
}}",
  "hover:tablet:color__BLUE",
  "@media (max-width: 768px) {.hover\\\\:tablet\\\\:color__BLUE:hover {
  color: blue;
}}",
]
`;

exports[`INJECT DEVELOPMENT should inject simple 1`] = `
Array [
  "color__RED",
  ".color__RED {
  color: red;
}",
]
`;

exports[`INJECT DEVELOPMENT should inject themes 1`] = `
Array [
  "tablet:color__GREEN",
  "@media (max-width: 768px) {.tablet\\\\:color__GREEN {
  color: var(--colors-GREEN);
}}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
]
`;

exports[`INJECT DEVELOPMENT should inject with breakpoint 1`] = `
Array [
  "tablet:color__RED",
  "@media (max-width: 768px) {.tablet\\\\:color__RED {
  color: red;
}}",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple breakpoints 1`] = `
Array [
  "laptop:mobile:color__RED",
  "@media (max-width: 1024px) {.laptop\\\\:mobile\\\\:color__RED {
  color: red;
}}@media (max-width: 640px) {.laptop\\\\:mobile\\\\:color__RED {
  color: red;
}}",
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple pseudo selectors 1`] = `
Array [
  "firstChild:hover:color__RED",
  ".firstChild\\\\:hover\\\\:color__RED:first-child:hover {
  color: red;
}",
]
`;

exports[`INJECT DEVELOPMENT should inject with pseudo selector 1`] = `
Array [
  "hover:color__RED",
  ".hover\\\\:color__RED:hover {
  color: red;
}",
]
`;
